--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="es.nekosoft.ejercicio01">
+    package="es.nekosoft.myhabits">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity.MainActivity"
+            android:name="es.nekosoft.myhabits.activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait">
@@ -24,24 +24,24 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.LogActivity"
+            android:name="es.nekosoft.myhabits.activity.LogActivity"
             android:label="@string/title_activity_log"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".activity.WebActivity"
+            android:name="es.nekosoft.myhabits.activity.WebActivity"
             android:label="@string/title_activity_web"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait"></activity>
 
         <service
-            android:name=".service.GeofenceIntentService"
+            android:name="es.nekosoft.myhabits.service.GeofenceIntentService"
             android:exported="false" />
         <service
-            android:name=".service.ActivityIntentService"
+            android:name="es.nekosoft.myhabits.service.ActivityIntentService"
             android:exported="false" />
         <service
-            android:name=".service.LocationIntentService"
+            android:name="es.nekosoft.myhabits.service.LocationIntentService"
             android:exported="false" />
 
     </application>
